Day 12 - part 02: implementation
* Refactor/improve existing code
* Add additional Javadoc
* Add Apache commons-math3 dependency
* Add implementation for part 2 using commons-math3 `lcm` and `Pair`